--- a/src/Components/Login&signUp/Registration.css
+++ b/src/Components/Login&signUp/Registration.css
@@ -1,12 +1,11 @@
 .registration {
   font-family: "Arial", sans-serif;
-  background-color: #f5f5f5;
-  margin: 0;
+  margin:50px 0;
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
 }
 .registerContainer {
@@ -14,7 +13,7 @@
   justify-content: center;
   align-items: center;
   width: 90%;
-  margin: auto;
+  margin: 0px auto;
   border: 1px solid #d1d1d1;
   border-radius: 13px;
   overflow: hidden;
@@ -22,8 +21,10 @@
   /* padding: 20px 0; */
 }
 .registrationHeader{
-  background-color: #f5f5f5;
+  
   margin-bottom: -50px;
+  display: flex;
+  justify-content: center;
 }
 .registerImg {
   object-fit: cover;
@@ -45,7 +46,7 @@
 .registerHeading {
   background-color: #007bff;
   width: 100%;
-  height: 60px;
+  min-height: 60px;
   color: white;
   display: flex;
   justify-content: center;
@@ -54,32 +55,44 @@
   margin-top: 0%;
   border-bottom: 0;
   margin-left: 0;
+  padding: 2px;
 }
 
 fieldset {
   padding: 0;
   border-radius: 6px;
+  border: 0;
+  
   min-width: 80%;
-  background: white;
+  background: transparent;
   display: flex;
   justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  border-bottom:2px solid rgb(197, 195, 195) ;
 }
 legend {
   font-weight: bold;
   color: #333;
-  font-size: 24px;
+  font-size: 16px;
   width: 100%;
+  text-transform: lowercase;
+  padding:0 20px;
+  padding-top: 10px;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-  width: 90%;
-  padding: 12px 0;
+  width: 100%;
+  padding: 20px 10px;
   transition: border-color 0.3s;
   border: 0px;
   outline: 0px;
-  margin: 0 10px;
+  /* margin: 0 10px; */
+  background:transparent;
+  /* border-radius: 6px;
+  border-bottom:2px solid rgb(197, 195, 195) ; */
 }
 
 .registerButton {
@@ -100,8 +113,6 @@ button:hover {
 }
 .message {
   margin-top: 10px;
-  /* color: red; */
-  /* color: blue; */
 }
 
 .link {
@@ -113,7 +124,11 @@ button:hover {
   .register {
     padding: 15px;
   }
-
+  .registrationHeader{
+    margin-bottom: -30px;
+    display: flex;
+    justify-content: center;
+  }
   input[type="text"],
   input[type="email"],
   input[type="password"] {
@@ -129,10 +144,10 @@ button:hover {
       background-color: #ff3300;  
     }*/
   .link {
-    color: #ff3300;
+    color: #004cff;
   }
   .goto {
-    color: white;
+    color: rgb(0, 0, 0);
     margin-top: 10px;
   }
   .registerContainer {
@@ -146,27 +161,9 @@ button:hover {
     z-index: 4;
   }
   .registerImg {
-    /* display: none; */
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    filter: blur(5px);
+    display: none;
   }
-  /* .registerContainer{
-    background: url("https://img.freepik.com/premium-vector/illustration-vector-graphic-cartoon-character-blogging_516790-1481.jpg?w=2000");
-     background-position: center;
-     background-size: cover;
-    filter: blur(3px);
-   -webkit-filter: blur(3px);
-    
-    backdrop-filter: blur(5px);
-    } */
 
-  /* img{
-      display: none;
-      position: absolute;
-    } */
   .register {
     width: 100%;
   }
