--- a/src/Components/ImageBar/HeaderImageStyle.css
+++ b/src/Components/ImageBar/HeaderImageStyle.css
@@ -46,8 +46,9 @@ position: relative;
 /* -----------------Header categories---------------------- */
 .headerText{
 position: absolute;
-/* background: #000000; */
-background: rgba(2, 166, 255,0.3);
+
+background: rgba(0, 0, 0, 0.3);
+/* background: rgba(2, 166, 255,0.3); */
 color: white;
 font-style: italic;
 font-size: 20px;
