--- a/src/Components/Sections/SectionsStyle.css
+++ b/src/Components/Sections/SectionsStyle.css
@@ -33,7 +33,7 @@
 /* ----------------Latest Article Img---------------- */
 .LatestArticleImg {
   display: inline-block;
- height: 347px;
+ height: 338px;
   margin: 0;
   object-fit: cover;
   margin-top: 10px;
@@ -50,7 +50,9 @@
   font-weight: bold;
   width: 80%;
 }
-
+.TopPost > div:nth-child(1){
+  height: 270px !important;
+}
 .TopPost > div:nth-child(1) .type5 .storieImages {
   height: 200px;
   max-width: 100%;
@@ -65,10 +67,12 @@
 }
 .TopPost > div:nth-child(1) .type5 {
   /* max-height: 300px; */
+  height: 100%;
   max-width: 100%;
   object-position: top;
-  margin: auto;
+  margin:0 auto;
 }
+
 .TopPost > div:not(:nth-child(1)) .type5 {
   /* color: aquamarine; */
   display: grid;
@@ -81,7 +85,12 @@
 
 }
 .TopPostHome>.TopPost > div:nth-child(1){
-  height: 120px;
+  height: 120px !important;
+
+}
+.TopPostHome>.TopPost > div:nth-child(1) .type5{
+  height:80% !important;
+  width: 100%;
 
 }
 .TopPost > div:not(:nth-child(1)) .type5 .storieImages {
@@ -141,7 +150,8 @@ color: aqua;
 }
 @media (max-width: 600px) {
   .TopPost > div:nth-child(1) .type5 {
-    max-height: 300px;
+    height: 100%;
+    /* max-height: 250px; */
     max-width: 100%;
     object-position: top;
   }
@@ -149,9 +159,10 @@ color: aqua;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    max-height: 250px;
-    max-width: 80%;
-    height: 70%;
+    height: 200px;
+    width: 100%;
+    object-position: center;
+    /* height: 100%; */
   }
   .adv {
     display: none;
