--- a/src/Components/GenericComonents/PostedByStyle.css
+++ b/src/Components/GenericComonents/PostedByStyle.css
@@ -40,7 +40,7 @@
     }
     .ProfileName{
         font-size: 0.6rem;
-       
+        margin-left: 10px;
     }
     .ProfileDate{
         font-size: 7px;
